--- a/src/style/components/courseLibrary.scss
+++ b/src/style/components/courseLibrary.scss
@@ -11,7 +11,6 @@
     width: 100%;
 }
 
-
 .course__arrow {
     border-left: 8px solid transparent;
     border-right: 8px solid transparent;
@@ -21,4 +20,21 @@
 
 .course__arrow-close {
     transform: rotate(180deg);
+}
+
+.course__title-container {
+    width: 85%;
+    display: flex;
+    justify-content: left;
+    align-items: center;
+}
+
+.course__selected {
+    background-color: white;
+    box-shadow: 0 2px 10px 0 rgba(0,0,0,0.21);
+}
+
+.course {
+    min-height: 60px;
+    transition: all .4s ease;
 }
