added styles to the schedule component

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -10,7 +10,7 @@
 
 .library {
     flex-grow: 2;
-    width: 70%;
+    width: 62%;
     padding: 6rem;
     z-index: 1;
 }
@@ -29,7 +29,19 @@
 .schedule {
     flex-grow: 1;
     width: 30%;
+    height: 100vh;
     background: linear-gradient(118.95deg, #6F48CE 0%, #32CBE8 100%);
+    text-align: center;
+    padding: 12rem 6rem;
+
+    .schedule__header {
+        border: none;
+        border-left: 1px solid white;
+        color: white;
+        font-size: 20px;
+        font-family: 'Alegreya', serif;
+        line-height: 27px;
+    }
 }
 
 ul {
@@ -68,20 +80,6 @@ ul li {
     font-size: 16px;
     font-weight: bold;
     line-height: 22px;
-}
-
-.slot__course {
-    background-color: white;
-    color: black;
-    border: 1px solid rgba(255,255,255,0.6);
-}
-
-.slot__empty {
-    opacity: 0.75;
-    background-color: transparent;
-    border: 1px solid rgba(255,255,255,0.6);
-    border-style: dashed;
-    color: white;
 }
 
 .show-content {
