added hover styles

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -11,8 +11,28 @@
 .library {
     flex-grow: 2;
     width: 62%;
+    height: 100vh;
     padding: 6rem;
     z-index: 1;
+}
+
+.schedule {
+    flex-grow: 1;
+    background: linear-gradient(118.95deg, #6F48CE 0%, #32CBE8 100%);
+    width: 38%;
+    height: 100vh;
+    text-align: center;
+    padding: 12rem 6rem;
+}
+
+
+.schedule__header {
+    border: none;
+    border-left: 1px solid white;
+    color:white;
+    font-size: 20px;
+    font-family: 'Alegreya', serif;
+    line-height: 27px;
 }
 
 .library__header {
@@ -26,27 +46,11 @@
     line-height: 47px;
 }
 
-.schedule {
-    flex-grow: 1;
-    width: 30%;
-    height: 100vh;
-    background: linear-gradient(118.95deg, #6F48CE 0%, #32CBE8 100%);
-    text-align: center;
-    padding: 12rem 6rem;
-
-    .schedule__header {
-        border: none;
-        border-left: 1px solid white;
-        color: white;
-        font-size: 20px;
-        font-family: 'Alegreya', serif;
-        line-height: 27px;
-    }
-}
 
 ul {
     list-style-type: none;
     margin: 0 25px;
+    margin-top: 50px;
     padding: 0;
     width: 120%;
 }
@@ -81,6 +85,8 @@ ul li {
     font-weight: bold;
     line-height: 22px;
 }
+
+
 
 .show-content {
     display: block;
