--- a/src/style/components/courseLibrary.scss
+++ b/src/style/components/courseLibrary.scss
@@ -1,7 +1,15 @@
+.action {
+    transition: all .3s ease;
+}
+
+
 .course:hover {
     background-color: white;    
     box-shadow: 0 2px 10px 0 rgba(0,0,0,0.21);
     transition: all .4s ease;
+    .action {
+        opacity: 1;
+    }
 }
 
 .course__info {
@@ -10,6 +18,7 @@
     align-items: center;
     width: 100%;
 }
+
 
 .course__arrow {
     border-left: 8px solid transparent;
@@ -21,6 +30,8 @@
 .course__arrow-close {
     transform: rotate(180deg);
 }
+
+
 
 .course__title-container {
     width: 85%;
