--- a/src/style/components/courseLibrary.scss
+++ b/src/style/components/courseLibrary.scss
@@ -1,4 +1,3 @@
-
 .action {
     transition: all .3s ease;
 }
@@ -98,6 +97,7 @@
         display: block;
         background-color: white;
         @include position-center;
+        transition: all .3s ease;
     }
 
     &:before {
@@ -117,14 +117,14 @@
 
 .course__remove {
     @include add-button;
-    transform: rotate(45deg);
+    // transform: rotate(45deg);
 
-    // &:before {
-    //     transform: translate(-50%, -50%) rotate(45deg);
-    // }
+    &:before {
+        transform: translate(-50%, -50%) rotate(45deg);
+    }
 
-    // &:after {
-    //     transform: translate(-50%, -50%) rotate(45deg);
-    // }
+    &:after {
+        transform: translate(-50%, -50%) rotate(-135deg);
+    }
 
 }
