--- a/src/style/components/courseLibrary.scss
+++ b/src/style/components/courseLibrary.scss
@@ -118,7 +118,6 @@
 .course__remove {
     @include add-button;
     // transform: rotate(45deg);
-
     &:before {
         transform: translate(-50%, -50%) rotate(45deg);
     }
@@ -126,5 +125,14 @@
     &:after {
         transform: translate(-50%, -50%) rotate(-135deg);
     }
+}
+
+.slot__remove {
+    @include add-button;
+    transform: translateY(-50%) rotate(45deg);
+    display: inline-block;
+    position: absolute;
+    right: 13px;
+    top: 50%;
 
 }
